# vhdlstuff

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
docs/: lsp.md  lsp_specification.md  natsuki.md
scripts/: git_helper.py  natsuki.py
src/: CMakeLists.txt  debug.cpp  version.h  vhdlstuff.cpp
src/bigint/: CMakeLists.txt  algorithms.cpp  algorithms.h  biginteger.cpp  biginteger.h  bigunsigned.cpp  bigunsigned.h  bigunsigned_in_a_base.cpp  bigunsigned_in_a_base.h  library.h  number_like_array.h  readme  utils.cpp  utils.h
src/common/: CMakeLists.txt  cancellation.cpp  cancellation.h  diagnostic.cpp  diagnostics.h  json.h  location.cpp  location.h  loguru.cpp  loguru.h  position.cpp  position.h  scope_guard.h  serialize.cpp  serialize.h  stringtable.cpp  stringtable.h
src/fmt/: CMakeLists.txt  args.h  core.h  format-inl.h  format.cpp  format.h
src/lsp/: CMakeLists.txt  client.cpp  client.h  connection.cpp  connection.h  frontend.cpp  frontend.h  server.cpp  server.h  structures.h
src/sqlite3/: CMakeLists.txt
src/sv/: ast.cpp  ast.h  fast_parser.cpp  fast_parser.h  library_manager.cpp  library_manager.h
src/things/: client.cpp  client.h  definition_provider.cpp  definition_provider.h  document_symbol_provider.cpp  document_symbol_provider.h  folding_range_provider.cpp  folding_range_provider.h  hover_provider.cpp  hover_provider.h  language.cpp  language.h  project.cpp  project.h  working_files.cpp  working_files.h
src/vhdl/: CMakeLists.txt  ast.cpp  ast.h  binder.cpp  binder.h  character_stream.cpp  character_stream.h  common.cpp  common.h  fast_parser.cpp  fast_parser.h  lexer.cpp  lexer.h  library_manager.cpp  library_manager.h  parser.cpp  parser.h  token.cpp  token.h  vhdl.nodes  vhdl.syntax
tests/: CMakeLists.txt  array_custom_obj_test.nodes  array_custom_ptr_test.nodes  array_natsuki_enum_test.nodes  array_natsuki_node_test.nodes  bigint_test.cpp  conditionally_owned_things_test.nodes  library_test.cpp  map_custom_obj_test.nodes  map_custom_ptr_test.nodes  map_natsuki_enum_test.nodes  map_natsuki_node_test.nodes  misc_test.cpp  node_inheritance_test.nodes  optional_custom_obj_test.nodes  optional_custom_ptr_test.nodes  optional_natsuki_enum_test.nodes  optional_natsuki_node_test.nodes  referenced_natsuki_node_test.nodes  serialize_test.cpp  test.vhd  value_custom_obj_test.nodes  value_custom_ptr_test.nodes  value_natsuki_enum_test.nodes  value_natsuki_node_test.nodes  vhdl_nodes_test.cpp
