
file(GLOB_RECURSE SQLITE3_SOURCES *.c)
file(GLOB_RECURSE SQLITE3_HEADERS *.h)

set(SQLITE3_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR})

add_library(libsqlite3 STATIC ${SQLITE3_SOURCES})
SET_TARGET_PROPERTIES(libsqlite3 PROPERTIES PREFIX "")

target_include_directories(libsqlite3 PUBLIC ${SQLITE3_INCLUDES})
